;; generate lexer
(ocamllex
  (modules lexer))

;; generate parser
(menhir
  (modules parser)
  (flags (-v --external-tokens Tokens)))

(library
  (name        p5scm)
  (public_name p5scm.lib)
  (libraries  sexp_pretty compiler-libs compiler-libs.common camlp5)
  (preprocess (per_module
               ((pps ppx_sexp_conv) ast)))  
  (virtual_deps menhir))

(rule
  (targets pa_scheme.ml pr_o.ml o_keywords.ml pr_dump.ml exparser.ml exparser.mli pconfig.ml)
  (deps (source_tree camlp5))
  (action (chdir camlp5 (run make))))

(env
  (dev
    (flags (:standard -w -27 -w -32 -w -33 -w -39))))
